    The user can click on the image and add reference points, which can then
    be used in the Box source. These points can then be dragged, giving
    the possibility to change the position and shape of objects interactively.
    In this way using Box becomes much easier, still retaining the advantages
    of a vectorial language over the traditional mouse driven graphic editors.
  * work on propagation of special procedures, such as creators, destructors
    etc. Now members are created/destroyed when their container is created/
    destroyed.

10 august 2008: Improved support of user defined procedures
  * exit status should now be treated more carefully:
    0, if all OK, 1 otherwise;
  * variables defined in the upper scope unit are globally defined and are
    accessible from procedures: for example, using the color structure
    inside a procedure is now possible;
  * $, $$, ... without depth specifications refer now to the current
    definition Box;
  * if NewType = OldType then NewType inherits the procedures of OldType
    (but OldType does not inherits the procedures of NewType). NewType
    inherits also the procedures of OldType which are defined after
    the occurrence of 'NewType = OldType';
  * Window.Hot now returns the last point it received as argument.
  * Str object has been introduced. This object allows to concatenate
    strings, print integers, reals, ... to string. It can be safely
    used in procedure definitions, since ()Char is automatically converted
    (Str = (()Char -> STR))

09 august 2008: Improved text formatting
  * Removed a small horrible bug in the selection of fonts:
    this was leading to crashes whenever a known postscript font
    was selected on Cairo terminals;
  * Introduced Window.Text.From to decide what corner of the text 
    should go in the provided point: useful for centering text;
  * Can now handle quite complex text formatting: subscripts,