@@ -10,20 +10,20 @@ lsb = LineStyle[5.0]
 lsa = LineStyle[3.0]
 w = Window[][
   // The X is made by just two lines with variable widths
-  \ .Line[0.5, lsb,
-          (31, 45), 0.7, 0.4, (28, 36), 0.4, 0.5, (24, 31), 0.6, (24, 30);
-          (25, 42), 0.7, 0.6, (28, 36), 0.5, 0.4, (33.5, 32),
-          (34, 27), 0.4, 0.5, (32, 22)]
+  \ .Line[1.0, lsb,
+          (31, 45), 1.4, 0.8, (28, 36), 0.8, 1.0, (24, 31), 1.2, (24, 30);
+          (25, 42), 1.4, 1.2, (28, 36), 1.0, 0.8, (33.5, 32),
+          (34, 27), 0.8, 1.0, (32, 22)]
   // The o is a ring
   \ .Circle[(c=(28.8, 30.8)), 2.3; c+(0.1, 0.1), 1.5]
   // The B is the more complicated thing to trace...
   \ .Line[lsb
-          0.4, (24.5, 34.5), 0.45, (16, 26), 0.5, 0.55, (12.5, 25.5);
+          0.8, (24.5, 34.5), 0.9, (16, 26), 1.0, 1.1, (12.5, 25.5);
           Color[color.red, .a=0.6]
-          0.1, (12.6, 25), 0.2, 0.25, (12.5, 22.5), 0.3, 0.35, (16, 21.5), 0.3
-          0.25, (18, 24), 0.2,  lsa, (18.5, 26), (18, 28), (17, 29), (16, 28)
-          (16.5, 26), (18.5, 24.5),  lsb, 0.3, 0.5, (24, 24), lsc, 0.4
-          0.35, (23, 30), 0.3, 0.2, (19, 35)]
+          0.2, (12.6, 25), 0.4, 0.5, (12.5, 22.5), 0.6, 0.7, (16, 21.5), 0.6
+          0.5, (18, 24), 0.4,  lsa, (18.5, 26), (18, 28), (17, 29), (16, 28)
+          (16.5, 26), (18.5, 24.5),  lsb, 0.6, 1.0, (24, 24), lsc, 0.8
+          0.7, (23, 30), 0.6, 0.4, (19, 35)]
 ]
 
 \ Window[][
