@@ -15,7 +15,7 @@ wheatstone = Window[][
   r34 = .Put[inductance, "rt", .Near[1, p3], .Near[2, p4]]
   r41 = .Put[resistor, "rt", .Near[1, p4], .Near[2, p1]]
 
-  \ .Line[0.2, p1, r12.Get[1]; r12.Get[2], p2; p2, r23.Get[1]; r23.Get[2], p3;
+  \ .Line[0.4, p1, r12.Get[1]; r12.Get[2], p2; p2, r23.Get[1]; r23.Get[2], p3;
           p3, r34.Get[1]; r34.Get[2], p4; p4, r41.Get[1]; r41.Get[2], p1]
 
   \ .Circle[0.8, p1; p2; p3; p4]
