@@ -11,7 +11,7 @@ Curve = Point
 w = Window[]
 a = 0.0
 af = 0.64
-\ w.Line[(x=4-4*a), Curve[(100.0, a)], x
+\ w.Line[(x=8*(1-a)), Curve[(100.0, a)], x
          For[(a += 0.005) < af]
          arrow_triangle, Curve[(100.0, af+0.02)], line.sharp]
 
