@@ -26,7 +26,7 @@ w = Window[][
             .Near["C", (x4, y1)], .Near["E", (x4, y2)]]
 
   // Trace all the connections between the components
-  \ .Line[0.2, (x0, y0), (x4, y0), r4.Get[1];
+  \ .Line[0.4, (x0, y0), (x4, y0), r4.Get[1];
           (x1, y0), r1.Get[1]; (x2, y0), r2.Get[1];
           (x3, y0), r3.Get[1];
           r1.Get[2], t1.Get["C"]; r4.Get[2], t2.Get["C"];
