@@ -49,7 +49,7 @@ face = Window[][
 
 // Now we can draw as many snakes as we want with just one Line instruction!
 snake = Window[]
-\ snake.Line[color.dark_green, line.smooth, (10, 10), 1, 4, (40, 100), 4, 5
+\ snake.Line[color.dark_green, line.smooth, (10, 10), 2, 8, (40, 100), 8, 10
              (80, 10), (120, 90), (150, 25), (170, 55), face, (195, 70)]
 
 snake.Save["snake.eps"]
