@@ -10,13 +10,12 @@ arrow_triangle = Window[][
 ]
 
 arrow_line = Window[][
-  \ .Line[line.sharp, 0.06, (0, -1), 0.06, (2, 0), (0, 1)]
+  \ .Line[line.sharp, 0.12, (0, -1), 0.12, (2, 0), (0, 1)]
   \ .Hot["head", (2, 0), "tail", (1.8, 0), "join", (1.8, 0)]
 ]
 
 arrow_ruler = Window[][
   \ .Poly[(0, -1), (0, 1), (2, 0)]
-  \ .Line[0.1, (2, -1), 0.1, (2, 1)]
+  \ .Line[0.2, (2, -1), 0.2, (2, 1)]
   \ .Hot["head", (2, 0), "tail", (1.8, 0), "join", (0, 0)]
 ]
-
