@@ -43,8 +43,7 @@ wheatstone = Window["fig"][
   // circle. Here we change only the center, so we need to specify the radius
   // only once!
   \ .Circle[0.8, p1; p2; p3; p4]
-
-  .Save["wheatstone.eps"]  // Saving to eps file
 ]
 
 GUI[wheatstone]
+
